--- a/movie-catalog-service/src/main/resources/application.properties
+++ b/movie-catalog-service/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=8081
 spring.application.name=movie-catalog-service
 management.endpoints.web.exposure.include=*
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
